# RSNewWebUI

./: .gitignore  CMakeLists.txt  GSoC_2019.txt  README.md  TODO.md  howto.txt  libwebui.so.1.0.0  webui.pro
tests/: basic_RS_communication_test.html
webui/: app.css  app.js
webui-src/: .eslintrc.json  .prettierrc  index.html  package.json  pnpm-lock.yaml  styles.css
webui-src/app/: config.js  downloads.js  green-black.scss  home.js  login.js  main.js  mithril.js  mithril.min.js  network.css  network.js  rswebui.js  theme.css  widgets.js
webui-src/app/assets/: index.html
webui-src/app/boards/: board.css  board_view.js  boards.js  boards_util.js  my_boards.js  other_boards.js  popular_boards.js  subscribed_boards.js
webui-src/app/channels/: channel.css  channel_view.js  channels.js  channels_util.js  my_channels.js  my_forums.js  other_channels.js  other_forums.js  popular_channels.js  popular_forums.js  sha1.js  subscribed_channels.js  subscribed_forums.js
webui-src/app/chat/: chat.css  chat.js
webui-src/app/config/: config.css  config_appearance.js  config_files.js  config_mail.js  config_network.js  config_node.js  config_people.js  config_resolver.js  config_services.js  config_util.js
webui-src/app/files/: files.css  files_downloads.js  files_manager.js  files_proxy.js  files_resolver.js  files_search.js  files_uploads.js  files_util.js  friend_files.js  friends_files.js  my_files.js
webui-src/assets/: index.html
webui-src/make-src/: README.md  build.bat  build.sh  init.bat  init.sh  main.css  template.js
webui-src/styles/: app.css  app.css.map
(+79 files in other folders)
